--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/x-icon" href="../images/favicon.png">
 	<link rel="stylesheet" href="style.css">
-	<script src="./main.js" defer></script>
+	<script type="module" src="./main.js" defer></script>
 	<title>Breakout</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
 		<h1>Breakout</h1>
 	</header>
 	<main>
-		<canvas id="canvas"></canvas>
+		<canvas id="canvas" width="640" height="320"></canvas>
 	</main>
 </body>
 </html>
